k8s/client-deployment.yaml
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec: # deployment definition
  replicas: 3
  selector: # find the set of pods that needs to control
    matchLabels:
      component: web

  template: # pod template/spec
    metadata:
      labels:
        component: web
    spec: # container spec
      containers:
        - name: client
          image: stephengrider/multi-client
          ports:
            - containerPort: 3000
