k8s/postgres-deployment.yaml
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec: # deployment definition
  replicas: 1
  selector: # find the set of pods that needs to control
    matchLabels:
      component: postgres

  template: # pod template/spec
    metadata:
      labels:
        component: postgres
    spec: # container spec
      volumes: #requesting persistent volume
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts: #mounting persistent volume
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data #needs db backup
              subPath: postgres
